--- a/.github/workflows/copilot-setup-steps.yml
+++ b/.github/workflows/copilot-setup-steps.yml
@@ -32,12 +32,11 @@ jobs:
         uses: r-lib/actions/setup-r@v2
         with:
           r-version: 'release'
+          use-public-rspm: true
 
       - name: Install dependencies
-        uses: r-lib/actions/setup-r-dependencies@v2
-        with:
-          extra-packages: |
-            github::UofUEpiBio/epiworldR@copilot/remove-measles-models
-            any::ggplot2
-            any::data.table
-          needs: check
+        run: |
+          Rscript -e 'install.packages("remotes")'
+          Rscript -e 'remotes::install_github("UofUEpiBio/measles")'
+          Rscript -e 'install.packages(c("ggplot2", "data.table"))'
+        
