--- a/.github/workflows/copilot-setup-steps.yml
+++ b/.github/workflows/copilot-setup-steps.yml
@@ -32,11 +32,12 @@ jobs:
         uses: r-lib/actions/setup-r@v2
         with:
           r-version: 'release'
-          use-public-rspm: true
 
       - name: Install dependencies
+        env:
+          GITHUB_PAT: ${{ secrets.GITHUB_PAT }}
         run: |
-          Rscript -e 'install.packages("remotes")'
-          Rscript -e 'remotes::install_github("UofUEpiBio/measles")'
-          Rscript -e 'install.packages(c("ggplot2", "data.table"))'
+          Rscript -e 'install.packages("pak")'
+          Rscript -e 'pak::pkg_install("UofUEpiBio/measles")'
+          Rscript -e 'pak::pkg_install(c("ggplot2", "data.table"))'
         
