--- a/.github/workflows/copilot-setup-steps.yml
+++ b/.github/workflows/copilot-setup-steps.yml
@@ -37,6 +37,7 @@ jobs:
         env:
           GITHUB_PAT: ${{ secrets.GITHUB_PAT }}
         run: |
+          apt-get update && apt-get install -y libcurl4-openssl-dev
           Rscript -e 'install.packages("pak")'
           Rscript -e 'pak::pkg_install("UofUEpiBio/measles")'
           Rscript -e 'pak::pkg_install(c("ggplot2", "data.table"))'
